hackily fix birthdate description wrapping

--- a/src/components/join-flow/join-flow-steps.scss
+++ b/src/components/join-flow/join-flow-steps.scss
@@ -101,6 +101,11 @@
     padding-top: 3rem;
 }
 
+.join-flow-birthdate-description {
+    margin-left: -.5rem;
+    margin-right: -.5rem;
+}
+
 .join-flow-gender-description {
     margin-top: .625rem;
     margin-bottom: 1.25rem;
